Main product layout changes.
Image grid changes.

Signup block tweaks.

--- a/index.html
+++ b/index.html
@@ -26,11 +26,16 @@
     </header>
 
     <main>
-      <section id="signup" class="signup_block">
-        <label for="email_signup"><span class="theSpan">the </span><span class="waterSourceSmall">Water Source</span></label>
-        <input type="email" name="email_signup" placeholder="123@example.com">
-        <button type="submit" class="signup_button">Sign Up</button>
-      </section>
+      <div id="signup" class="signup_container">
+        <section class="signup_block">
+          <label for="email_signup"><span class="theSpanSmall">the </span><span class="waterSourceSmall">Water Source</span></label>
+            <div class="signup_inputContainer">
+              <input type="email" name="email_signup" placeholder="123@example.com">
+              <button type="submit" class="signup_button">Sign Up</button>
+            </div>
+        </section>
+      </div>
+
 
       <section class="product_highlight">
         <div class="product_highlightIcon highlightIcon1"><img src="./images/bottle_icon.png" alt=""></div>
@@ -38,28 +43,31 @@
         <div class="product_highlightIcon highlightIcon3"><img src="./images/recycle_icon.png" alt=""></div>
         <div class="product_highlightContent highlightContent1">
           <ul>
-            <li>Item One</li>
-            <li>Item Two</li>
-            <li>Item Three</li>
+            <li>Amazing Marketing Features</li>
+            <li>Amazing Marketing Features</li>
+            <li>Amazing Marketing Features</li>
           </ul>
         </div>
         <div class="product_highlightContent highlightContent2">
           <ul>
-            <li>Item One</li>
-            <li>Item Two</li>
-            <li>Item Three</li>
+            <li>Amazing Marketing Features</li>
+            <li>Amazing Marketing Features</li>
+            <li>Amazing Marketing Features</li>
           </ul>
         </div>
         <div class="product_highlightContent highlightContent3">
           <ul>
-            <li>Item One</li>
-            <li>Item Two</li>
-            <li>Item Three</li>
+            <li>Amazing Marketing Features</li>
+            <li>Amazing Marketing Features</li>
+            <li>Amazing Marketing Features</li>
           </ul>
         </div>
         <div class="product_highlightImage highlightImage1"><img src="./images/highlight1.jpg" alt=""></div>
         <div class="product_highlightImage highlightImage2"><img src="./images/highlight2.jpg" alt=""></div>
         <div class="product_highlightImage highlightImage3"><img src="./images/highlight3.jpg" alt=""></div>
+        <div class="product_highlightImage highlightImage1r"><img src="./images/highlight1r.jpg" alt=""></div>
+        <div class="product_highlightImage highlightImage2r"><img src="./images/highlight2r.jpg" alt=""></div>
+        <div class="product_highlightImage highlightImage3r"><img src="./images/highlight3r.jpg" alt=""></div>
       </section>
 
       <section id="products" class="product_grid">
