--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </section>
 
       <section id="products" class="product_grid">
-        <fieldset class="product">
+        <fieldset class="product product1">
             <legend><button class="product_button" type="button">Purchase Details</button></legend>
             <ul>
               <li>Lorem ipsum dolor sit amet</li>
@@ -84,7 +84,7 @@
               <h2>Product Label</h2>
             </div>
         </fieldset>
-        <fieldset class="product">
+        <fieldset class="product product2">
           <legend><button class="product_button" type="button">Purchase Details</button></legend>
           <ul>
             <li>Lorem ipsum dolor sit amet</li>
@@ -97,7 +97,7 @@
             <h2>Product Label</h2>
           </div>
         </fieldset>
-        <fieldset class="product">
+        <fieldset class="product product3">
           <legend><button class="product_button" type="button">Purchase Details</button></legend>
           <ul>
             <li>Lorem ipsum dolor sit amet</li>
@@ -110,7 +110,7 @@
             <h2>Product Label</h2>
           </div>
         </fieldset>
-        <fieldset class="product">
+        <fieldset class="product product4">
           <legend><button class="product_button" type="button">Purchase Details</button></legend>
           <ul>
             <li>Lorem ipsum dolor sit amet</li>
@@ -124,10 +124,10 @@
           </div>
         </fieldset>
 
-        <div class="img_container"><img src="./images/img_grid1.jpg" alt=""></div>
-        <div class="img_container"><img src="./images/img_grid2.jpg" alt=""></div>
-        <div class="img_container"><img src="./images/img_grid3.jpg" alt=""></div>
-        <div class="img_container"><img src="./images/img_grid4.jpg" alt=""></div>
+        <div class="img_container img_container1"><img src="./images/img_grid1.jpg" alt=""></div>
+        <div class="img_container img_container2"><img src="./images/img_grid2.jpg" alt=""></div>
+        <div class="img_container img_container3"><img src="./images/img_grid3.jpg" alt=""></div>
+        <div class="img_container img_container4"><img src="./images/img_grid4.jpg" alt=""></div>
       </section>
 
       <section id="testimony" class="testimony_block">
