Tag & CSS Cleanup
Unified class tags for readability, cleanup of CSS.

--- a/index.html
+++ b/index.html
@@ -12,23 +12,20 @@
     <header>
       <nav>
         <ul>
-          <li class="push"><div class="logo"><img src="./images/drop_icon.png" alt=""></div></li>
+          <li class="nav_push"><div class="nav_logo"><img src="./images/drop_icon.png" alt=""></div></li>
           <li><a href="#top">Home</a></li>
           <li><a href="#signup">Sign Up</a></li>
           <li><a href="#products">Products</a></li>
           <li><a href="#testimony">Feedback</a></li>
         </ul>
       </nav>
-      <h1 class="waterSource"><span class="theSpan">the </span>Water Source</h1>
-      <div class="header_border1"></div>
-      <div class="header_border2"></div>
-      <div class="header_border3"></div>
+      <h1 class="h1_waterSource"><span class="h1_theSpan">the </span>Water Source</h1>
     </header>
 
     <main>
       <div id="signup" class="signup_container">
         <section class="signup_block">
-          <label for="email_signup"><span class="theSpanSmall">the </span><span class="waterSourceSmall">Water Source</span></label>
+          <label for="email_signup"><span class="email_theSpanSmall">the </span><span class="email_waterSourceSmall">Water Source</span></label>
             <div class="signup_inputContainer">
               <input type="email" name="email_signup" placeholder="123@example.com">
               <button type="submit" class="signup_button">Sign Up</button>
@@ -71,7 +68,7 @@
       </section>
 
       <section id="products" class="product_grid">
-        <fieldset class="product product1">
+        <fieldset class="product_container product1">
             <legend><button class="product_button" type="button">Purchase Details</button></legend>
             <ul>
               <li>Lorem ipsum dolor sit amet</li>
@@ -84,7 +81,7 @@
               <h2>Product Label</h2>
             </div>
         </fieldset>
-        <fieldset class="product product2">
+        <fieldset class="product_container product2">
           <legend><button class="product_button" type="button">Purchase Details</button></legend>
           <ul>
             <li>Lorem ipsum dolor sit amet</li>
@@ -97,7 +94,7 @@
             <h2>Product Label</h2>
           </div>
         </fieldset>
-        <fieldset class="product product3">
+        <fieldset class="product_container product3">
           <legend><button class="product_button" type="button">Purchase Details</button></legend>
           <ul>
             <li>Lorem ipsum dolor sit amet</li>
@@ -110,7 +107,7 @@
             <h2>Product Label</h2>
           </div>
         </fieldset>
-        <fieldset class="product product4">
+        <fieldset class="product_container product4">
           <legend><button class="product_button" type="button">Purchase Details</button></legend>
           <ul>
             <li>Lorem ipsum dolor sit amet</li>
@@ -124,39 +121,39 @@
           </div>
         </fieldset>
 
-        <div class="img_container img_container1"><img src="./images/img_grid1.jpg" alt=""></div>
-        <div class="img_container img_container2"><img src="./images/img_grid2.jpg" alt=""></div>
-        <div class="img_container img_container3"><img src="./images/img_grid3.jpg" alt=""></div>
-        <div class="img_container img_container4"><img src="./images/img_grid4.jpg" alt=""></div>
+        <div class="product_gridImgContainer gridImgContainer1"><img src="./images/img_grid1.jpg" alt=""></div>
+        <div class="product_gridImgContainer gridImgContainer2"><img src="./images/img_grid2.jpg" alt=""></div>
+        <div class="product_gridImgContainer gridImgContainer3"><img src="./images/img_grid3.jpg" alt=""></div>
+        <div class="product_gridImgContainer gridImgContainer4"><img src="./images/img_grid4.jpg" alt=""></div>
       </section>
 
       <section id="testimony" class="testimony_block">
-        <h2 class="testimonyMainHeader">The People</h2>
+        <h2 class="testimony_h2">The People</h2>
         <div class="testimony_container">
-          <article class="testimonyContent">
-            <h3 class="testimonyHeaderStyle">Client Name</h3>
+          <article class="testimony_content">
+            <h3 class="testimony_clientH3">Client Name</h3>
             <p class="testimonyContentInside">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <h4 class="testimonyFooterStyle">Location - Date</h4>
+            <h4 class="testimony_clientFooter">Location - Date</h4>
           </article>
-          <article class="testimonyContent">
-            <h3 class="testimonyHeaderStyle">Client Name</h3>
+          <article class="testimony_content">
+            <h3 class="testimony_clientH3">Client Name</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <h4 class="testimonyFooterStyle">Location - Date</h4>
+            <h4 class="testimony_clientFooter">Location - Date</h4>
           </article>
-          <article class="testimonyContent">
-            <h3 class="testimonyHeaderStyle">Client Name</h3>
+          <article class="testimony_content">
+            <h3 class="testimony_clientH3">Client Name</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <h4 class="testimonyFooterStyle">Location - Date</h4>
+            <h4 class="testimony_clientFooter">Location - Date</h4>
           </article>
-          <article class="testimonyContent">
-            <h3 class="testimonyHeaderStyle">Client Name</h3>
+          <article class="testimony_content">
+            <h3 class="testimony_clientH3">Client Name</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <h4 class="testimonyFooterStyle">Location - Date</h4>
+            <h4 class="testimony_clientFooter">Location - Date</h4>
           </article>
-          <article class="testimonyContent">
-            <h3 class="testimonyHeaderStyle">Client Name</h3>
+          <article class="testimony_content">
+            <h3 class="testimony_clientH3">Client Name</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <h4 class="testimonyFooterStyle">Location - Date</h4>
+            <h4 class="testimony_clientFooter">Location - Date</h4>
           </article>
         </div>
       </section>
