--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" name="viewport" name="viewport" content="width=device-width, initial-scale=1">
-    <title>FCC - Product Landing</title>
+    <title>Product Landing - Demo</title>
     <link rel="stylesheet" href="./css/master.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed&family=Raleway&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Tangerine&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed&family=Raleway&family=Tangerine&display=swap" rel="stylesheet">
   </head>
   <body>
 
@@ -32,7 +31,6 @@
             </div>
         </section>
       </div>
-
 
       <section class="product_highlight">
         <div class="product_highlightIcon highlightIcon1"><img src="./images/bottle_icon.png" alt=""></div>
@@ -157,12 +155,11 @@
           </article>
         </div>
       </section>
-
     </main>
+
     <footer id="footer">
       <p>Footer - Sample Text</p>
     </footer>
 
-    </script>
   </body>
 </html>
